--- a/TodoServerApp/Components/Pages/Tasks.razor
+++ b/TodoServerApp/Components/Pages/Tasks.razor
@@ -1,4 +1,7 @@
 ﻿@page "/"
+@inject IDataService data;
+@rendermode InteractiveServer
+@attribute [Authorize]
 
 <PageTitle>Задачи</PageTitle>
 
@@ -15,24 +18,34 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var task in tasks)
+        @if (tasks == null)
         {
             <tr>
-                <td>@task.Id</td>
-                <td>@task.Title</td>
-                <td>@task.Description</td>
-                <td>@task.CreatedDate</td>
-                <td>@task.FinishDate</td>
+                <td colspan="5">Загрузка...</td>
             </tr>
+        }
+        else
+        {
+            @foreach (var task in tasks)
+            {
+                <tr>
+                    <td>@task.Id</td>
+                    <td>@task.Title</td>
+                    <td>@task.Description</td>
+                    <td>@task.CreatedDate</td>
+                    <td>@task.FinishDate</td>
+                </tr>
+            }
         }
     </tbody>
 </table>
 
 @code{
-    IEnumerable<TaskItem> tasks = new List<TaskItem>
+    IEnumerable<TaskItem>? tasks;
+
+    protected override async Task OnInitializedAsync()
     {
-        new TaskItem {Id = 1, Title = "Задача 1", Description = "Описание задачи 1", CreatedDate = DateTime.Now, FinishDate = DateTime.Now.AddDays(2)},
-        new TaskItem {Id = 2, Title = "Задача 2", Description = "Описание задачи 2", CreatedDate = DateTime.Now, FinishDate = DateTime.Now.AddDays(5)},
-        new TaskItem {Id = 3, Title = "Задача 3", Description = "Описание задачи 3", CreatedDate = DateTime.Now, FinishDate = DateTime.Now.AddDays(34)},
-    };
+        await base.OnInitializedAsync();
+        tasks = await data.GetTaskItemsAsync();
+    }
 }
