--- a/TodoServerApp/Components/Pages/Tasks.razor
+++ b/TodoServerApp/Components/Pages/Tasks.razor
@@ -1,6 +1,7 @@
 ﻿@page "/"
 @inject IDataService data;
 @rendermode InteractiveServer
+@inject NavigationManager navigate
 @attribute [Authorize]
 
 <PageTitle>Задачи</PageTitle>
@@ -13,6 +14,9 @@
     }
     else
     {
+        <div class="btn-group m-2">
+            <button class="btn btn-primary" @onclick="AddTask">Новая задача</button>
+        </div>
         <div class="card-group">
             @foreach (var task in tasks)
             {
@@ -23,6 +27,10 @@
                     <div class="card-body">
                         <p>@task.Description</p>
                         <p>@task.CreatedDate</p>
+                    </div>
+                    <div class="card-footer">
+                        <a class="btn btn-primary" href="tasks/@task.Id">Изменить</a>
+                        <button class="btn btn-primary" onclick="async () => await DeleteTask(task.Id)">Удалить</button>
                     </div>
                 </div>
             }
@@ -37,6 +45,17 @@
     protected override async Task OnInitializedAsync()
     {
         await base.OnInitializedAsync();
-        tasks = await data.GetTaskItemsAsync();
+        tasks = await data.GetAllAsync();
+    }
+
+    void AddTask()
+    {
+        navigate.NavigateTo("tasks/add");
+    }
+
+    async Task DeleteTask(int id)
+    {
+        await data.DeleteAsync(id);
+        tasks = await data.GetAllAsync();
     }
 }
